# 2-DOF-Customized-Mirobot-

./: 2-dplot.py  README.md  child_script.lua  dynamics_control.py  package.xml  setup.py
launch/: launch_dynamics.py
resource/: dynamics_control
